# uvlm-publications

./: AGENTS.md  CONTINUITY_HANDOFF_ATLAS_2026-04-02.md  DOI_NAMESPACE.md  README.md  Start-Atlas-Dev.ps1  Start-Atlas.ps1  TRIADIC_BRAIN_CONTINUITY_HANDOFF_2026-04-02.md  Triadic_Brain_Mathematical_Glossary.md  pyproject.toml  requirements.txt
appendix/: triadic_brain_navigation_minimal_math.md
artifacts/: civilizational_coherence_map.json  coherence_gradient_map.json  corridor_map.json  global_coherence_field_map.json  river_formation_map.json  terrace_map.json
atlas/: app.js  atlas.js  attentionOverlay.js  driftVisualization.js  edgeLabels.js  index.html  layoutConfig.js  layoutEngine.js  metadataPanel.js  nodeStyles.js  search.js  styles.css  telAgentTelemetryOverlay.js  telCascadeOverlay.js  telCorridorOverlay.js  telDeltaOverlay.js  telNavigationOverlay.js  telOrthodoxyOverlay.js  telRebraidOverlay.js  telRiverOverlay.js  telRuptureOverlay.js  telSchismOverlay.js  telTerraceOverlay.js  timelineConfig.js  timelineControls.js  timelineEngine.js  zoomController.js  zoomLevels.js
bridge/: action_functional_scorecard.json  agency_fit_comparison_report.json  agency_governance_mode_gate.json  agency_mode_audit.json  agency_mode_hypothesis_map.json  agency_mode_recommendations.json  amendment_candidate_map.json  amendment_recommendations.json  architecture_audit.json  architecture_proposal_report.json  architecture_recommendations.json  artifact_escrow_plan.json  attention_updates.json  attestation_recommendations.json  attestation_state_map.json  branch_state_map.json  (+229 more)
(+748 files in other folders)
